--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,12 @@
 
+
+#Windows
+spring.datasource.url=jdbc:sqlserver://192.168.1.200;databaseName=meirelles
+spring.jpa.properties.hibernate.jdbc.time_zone=UTC
+spring.datasource.username=master
+spring.datasource.password=123
+spring.datasource.driverClassName=com.microsoft.sqlserver.jdbc.SQLServerDriver
+spring.jpa.show-sql=true
+spring.jpa.hibernate.dialect=org.hibernate.dialect.SQLServer2012Dialect
+spring.jpa.hibernate.ddl-auto=update
+
