Adicionado Geração e envio de Arquivo de Estoque da EMS BugFix na leitura do diretório

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -14,6 +14,10 @@ spring.jpa.hibernate.ddl-auto=update
 
 # Parametros
 app.filial.cnpj=01260848000112
+app.filial.local.estoque=01
+app.filial=01
 
-app.cron= 0 * * * * *
+# Agendamentos
+app.cron.busca.ftp= 0 0/10 * * * *
+app.cron.gera.estoque= 0 * * * * *
 
