--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,7 @@
 
 
 #Windows
+server.port=${APP_PORT:6500}
 spring.datasource.url=jdbc:sqlserver://127.0.0.1;databaseName=meirelles
 spring.jpa.properties.hibernate.jdbc.time_zone=UTC
 spring.datasource.username=master
@@ -16,8 +17,11 @@ spring.output.ansi.enabled=ALWAYS
 app.filial.cnpj=01260848000112
 app.filial.local.estoque=01
 app.filial=01
+app.usa.regras.comercias=false
+app.usa.regras.financeiras=true
+app.usa.regras.finalizacao=false
 
 # Agendamentos
-app.cron.busca.ftp= 0 0/10 * * * *
-app.cron.gera.estoque= 0 * * * * *
+app.cron.busca.ftp= 0 * * * * *
+app.cron.gera.estoque= 0 5 * * * *
 
