Corrigido busca de preço da consys

--- a/server/src/main/resources/application.properties
+++ b/server/src/main/resources/application.properties
@@ -22,6 +22,6 @@ app.usa.regras.financeiras=true
 app.usa.regras.finalizacao=false
 
 # Agendamentos
-app.cron.busca.ftp= 0 * * * * *
-app.cron.gera.estoque= 0 5 * * * *
+app.cron.busca.ftp= 0 0 1 * * *
+app.cron.gera.estoque= 0 0 5 * * *
 
