Criado Retorno de Pedido IQVIA

--- a/server/src/main/resources/application.properties
+++ b/server/src/main/resources/application.properties
@@ -2,7 +2,7 @@
 
 #Windows
 server.port=${APP_PORT:6500}
-spring.datasource.url=jdbc:sqlserver://127.0.0.1;databaseName=meirelles
+spring.datasource.url=jdbc:sqlserver://192.168.0.100;databaseName=dbmeirelles
 spring.jpa.properties.hibernate.jdbc.time_zone=UTC
 spring.datasource.username=master
 spring.datasource.password=123
