--- a/server/src/main/resources/application-test.properties
+++ b/server/src/main/resources/application-test.properties
@@ -1,7 +1,7 @@
 
 
 #Windows
-spring.datasource.url=jdbc:sqlserver://192.168.1.200:1433;databaseName=meirelles
+spring.datasource.url=jdbc:sqlserver://192.168.0.100:1433;databaseName=dbmeirelles
 spring.jpa.properties.hibernate.jdbc.time_zone=UTC
 spring.datasource.username=master
 spring.datasource.password=123
