Alterado erro em query nova

--- a/server/src/main/resources/application-test.properties
+++ b/server/src/main/resources/application-test.properties
@@ -9,3 +9,16 @@ spring.datasource.driverClassName=com.microsoft.sqlserver.jdbc.SQLServerDriver
 spring.jpa.hibernate.dialect=org.hibernate.dialect.SQLServer2012Dialect
 
 
+# Parametros
+app.filial.cnpj=01260848000112
+app.filial.local.estoque=01
+app.filial=01
+app.usa.regras.comercias=false
+app.usa.regras.financeiras=true
+app.usa.regras.finalizacao=false
+
+# Agendamentos
+app.cron.busca.ftp=-
+app.cron.gera.estoque=-
+
+
