Parte 1 mudanca de estrutura

--- a/server/src/main/resources/application-test.properties
+++ b/server/src/main/resources/application-test.properties
@@ -1,10 +1,10 @@
 
 
 #Windows
-spring.datasource.url=jdbc:sqlserver://192.168.0.100:1433;databaseName=dbmeirelles
+spring.datasource.url=jdbc:sqlserver://127.0.0.1:1433;databaseName=dbMeirelles;encrypt=false
 spring.jpa.properties.hibernate.jdbc.time_zone=UTC
-spring.datasource.username=master
-spring.datasource.password=123
+spring.datasource.username=sa
+spring.datasource.password=@nfs32xpt#
 spring.datasource.driverClassName=com.microsoft.sqlserver.jdbc.SQLServerDriver
 spring.jpa.hibernate.dialect=org.hibernate.dialect.SQLServer2012Dialect
 
@@ -18,7 +18,7 @@ app.usa.regras.financeiras=true
 app.usa.regras.finalizacao=false
 
 # Agendamentos
-app.cron.busca.ftp=-
+app.cron.busca.ftp= -
 app.cron.gera.estoque=-
 
 
