Fazendo sfa pt1

--- a/server/src/main/resources/application-test.properties
+++ b/server/src/main/resources/application-test.properties
@@ -1,12 +1,14 @@
 
 
 #Windows
-spring.datasource.url=jdbc:sqlserver://127.0.0.1:1433;databaseName=dbMeirelles;encrypt=false
+spring.datasource.url=jdbc:h2:mem:testdb;MODE=MSSQLServer
+spring.h2.console.enabled=true
 spring.jpa.properties.hibernate.jdbc.time_zone=UTC
 spring.datasource.username=sa
 spring.datasource.password=@nfs32xpt#
-spring.datasource.driverClassName=com.microsoft.sqlserver.jdbc.SQLServerDriver
-spring.jpa.hibernate.dialect=org.hibernate.dialect.SQLServer2012Dialect
+spring.jpa.hibernate.ddl-auto=update
+#spring.datasource.driverClassName=com.microsoft.sqlserver.jdbc.SQLServerDriver
+#spring.jpa.hibernate.dialect=org.hibernate.dialect.SQLServer2012Dialect
 
 
 # Parametros
@@ -29,5 +31,9 @@ app.petronas.client_secret=799C4B5F514C8F25CCF0AE0128A3A068C06EBC3B4B074A2BF2A7B
 app.petronas.username=ebestmobile_integration@newbrazil.ebestmobile.com.partial
 app.petronas.password=eBest@2023
 app.petronas.grant_type=password
+
+app.petronas.auth.user=petronas
+app.petronas.auth.password=petronas
+app.petronas.auth.token=ed91a9f64a03896a76bd091f5128f10d169cf51f
 
 
