--- a/server/src/main/resources/application.properties
+++ b/server/src/main/resources/application.properties
@@ -6,9 +6,9 @@ spring.datasource.url=jdbc:sqlserver://192.168.0.100;databaseName=dbmeirelles;en
 spring.jpa.properties.hibernate.jdbc.time_zone=UTC
 spring.datasource.username=master
 spring.datasource.password=123
-spring.datasource.driverClassName=com.microsoft.sqlserver.jdbc.SQLServerDriver
+#spring.datasource.driverClassName=com.microsoft.sqlserver.jdbc.SQLServerDriver
 spring.jpa.show-sql=true
-spring.jpa.hibernate.dialect=org.hibernate.dialect.SQLServer2012Dialect
+#spring.jpa.hibernate.dialect=org.hibernate.dialect.SQLServer2012Dialect
 spring.jpa.hibernate.ddl-auto=none
 spring.output.ansi.enabled=ALWAYS
 
@@ -33,4 +33,10 @@ app.petronas.client_secret=799C4B5F514C8F25CCF0AE0128A3A068C06EBC3B4B074A2BF2A7B
 app.petronas.username=ebestmobile_integration@newbrazil.ebestmobile.com.partial
 app.petronas.password=eBest@2023
 app.petronas.grant_type=password
+
+app.petronas.auth.user=petronas
+app.petronas.auth.password=petronas
+app.petronas.auth.token=ed91a9f64a03896a76bd091f5128f10d169cf51f
+
+
 
