--- a/server/src/main/resources/application-test.properties
+++ b/server/src/main/resources/application-test.properties
@@ -1,15 +1,17 @@
 
 
 #Windows
-spring.datasource.url=jdbc:h2:mem:testdb;MODE=MSSQLServer
+#spring.datasource.url=jdbc:h2:mem:testdb;MODE=MSSQLServer
+spring.datasource.url=jdbc:sqlserver://127.0.0.1;databaseName=dbMeirelles;encrypt=false
 spring.h2.console.enabled=true
 spring.jpa.properties.hibernate.jdbc.time_zone=UTC
 spring.datasource.username=sa
 spring.datasource.password=@nfs32xpt#
 spring.jpa.hibernate.ddl-auto=update
-#spring.datasource.driverClassName=com.microsoft.sqlserver.jdbc.SQLServerDriver
-#spring.jpa.hibernate.dialect=org.hibernate.dialect.SQLServer2012Dialect
-
+spring.datasource.driverClassName=com.microsoft.sqlserver.jdbc.SQLServerDriver
+spring.jpa.hibernate.dialect=org.hibernate.dialect.SQLServer2012Dialect
+spring.sql.init.mode=never
+spring.jackson.mapper.ACCEPT_CASE_INSENSITIVE_PROPERTIES=true
 
 # Parametros
 app.filial.cnpj=01260848000112
