Criado trigger pt 1

--- a/server/src/main/resources/application-test.properties
+++ b/server/src/main/resources/application-test.properties
@@ -10,7 +10,7 @@ spring.datasource.password=@nfs32xpt#
 spring.jpa.hibernate.ddl-auto=update
 spring.datasource.driverClassName=com.microsoft.sqlserver.jdbc.SQLServerDriver
 spring.jpa.hibernate.dialect=org.hibernate.dialect.SQLServer2012Dialect
-spring.sql.init.mode=never
+spring.sql.init.mode=always
 spring.jackson.mapper.ACCEPT_CASE_INSENSITIVE_PROPERTIES=true
 
 # Parametros
