Criado Envio de movimentos para sales

--- a/server/src/main/resources/application-test.properties
+++ b/server/src/main/resources/application-test.properties
@@ -33,7 +33,7 @@ app.petronas.client_secret=799C4B5F514C8F25CCF0AE0128A3A068C06EBC3B4B074A2BF2A7B
 app.petronas.username=ebestmobile_integration@newbrazil.ebestmobile.com.partial
 app.petronas.password=eBest@2023
 app.petronas.grant_type=password
-
+app.petronas.dtcode=LAAF
 app.petronas.auth.user=petronas
 app.petronas.auth.password=petronas
 app.petronas.auth.token=ed91a9f64a03896a76bd091f5128f10d169cf51f
