--- a/server/src/main/resources/application-test.properties
+++ b/server/src/main/resources/application-test.properties
@@ -2,7 +2,7 @@
 
 #Windows
 #spring.datasource.url=jdbc:h2:mem:testdb;MODE=MSSQLServer
-spring.datasource.url=jdbc:sqlserver://127.0.0.1;databaseName=dbMeirelles;encrypt=false
+spring.datasource.url=jdbc:sqlserver://postao.inovareti.eti.br;port=51432;databaseName=dbLAAF;encrypt=false
 spring.h2.console.enabled=true
 spring.jpa.properties.hibernate.jdbc.time_zone=UTC
 spring.datasource.username=sa
