Corrigido erro na conversao, criado envio de pedidos para a sfa

--- a/server/src/main/resources/application-test.properties
+++ b/server/src/main/resources/application-test.properties
@@ -17,9 +17,9 @@ spring.jackson.mapper.ACCEPT_CASE_INSENSITIVE_PROPERTIES=true
 app.filial.cnpj=01260848000112
 app.filial.local.estoque=01
 app.filial=01
-app.usa.regras.comercias=false
+app.usa.regras.comercias=true
 app.usa.regras.financeiras=true
-app.usa.regras.finalizacao=false
+app.usa.regras.finalizacao=true
 
 # Agendamentos
 app.cron.busca.ftp= -
