Refatorado repositories do SFA para usar views do banco de dados

--- a/server/src/main/resources/application-test.properties
+++ b/server/src/main/resources/application-test.properties
@@ -5,8 +5,8 @@
 spring.datasource.url=jdbc:sqlserver://postao.inovareti.eti.br;port=51432;databaseName=dbLAAF;encrypt=false
 spring.h2.console.enabled=true
 spring.jpa.properties.hibernate.jdbc.time_zone=UTC
-spring.datasource.username=sa
-spring.datasource.password=@nfs32xpt#
+spring.datasource.username=manutencao
+spring.datasource.password=manutencao
 spring.jpa.hibernate.ddl-auto=update
 spring.datasource.driverClassName=com.microsoft.sqlserver.jdbc.SQLServerDriver
 spring.jpa.hibernate.dialect=org.hibernate.dialect.SQLServer2012Dialect
