alterado logicas de negocio petronas

--- a/server/src/main/resources/application-test.properties
+++ b/server/src/main/resources/application-test.properties
@@ -24,6 +24,8 @@ app.usa.regras.finalizacao=true
 # Agendamentos
 app.cron.busca.ftp= -
 app.cron.gera.estoque=-
+
+app.cron.petronas.envia.geral=${CRON_PETRONAS_ENVIO:-}
 app.cron.petronas.envia.clientes=${CRON_PETRONAS_CLIENTES:-}
 app.cron.petronas.envia.pedidos=${CRON_PETRONAS_PEDIDOS:-}
 app.cron.petronas.envia.notas=${CRON_PETRONAS_NOTAS:-}
