--- a/server/src/main/resources/application.properties
+++ b/server/src/main/resources/application.properties
@@ -28,6 +28,7 @@ app.usa.regras.finalizacao=false
 app.cron.busca.ftp=${CRON_BUSCA_FTP:-}
 app.cron.gera.estoque=${CRON_GERA_ESTOQUE:-}
 
+app.cron.petronas.envia.geral=${CRON_PETRONAS_ENVIO:-}
 app.cron.petronas.envia.clientes=${CRON_PETRONAS_CLIENTES:-}
 app.cron.petronas.envia.pedidos=${CRON_PETRONAS_PEDIDOS:-}
 app.cron.petronas.envia.notas=${CRON_PETRONAS_NOTAS:-}
