alterado logicas de negocio petronas

--- a/server/src/main/resources/application-test.properties
+++ b/server/src/main/resources/application-test.properties
@@ -47,3 +47,6 @@ app.petronas.auth.password=petronas
 app.petronas.auth.token=ed91a9f64a03896a76bd091f5128f10d169cf51f
 
 
+logging.level.br.symbiosys.solucoes.cronospharma.modules.petronas.ports.api.implementation= DEBUG
+feign.client.config.default.loggerLevel=full
+
