--- a/server/src/main/resources/application-prod.properties
+++ b/server/src/main/resources/application-prod.properties
@@ -1,11 +1,11 @@
 
 
 #Windows
-spring.datasource.url=jdbc:sqlserver://postao.inovareti.eti.br;port=51432;databaseName=dbLAAF;encrypt=false;applicationName=cronos-pharma
+spring.datasource.url=${JDBC_URL:jdbc:sqlserver://postao.inovareti.eti.br;port=51432;databaseName=dbLAAF;encrypt=false;applicationName=cronos-pharma}
 spring.h2.console.enabled=true
 spring.jpa.properties.hibernate.jdbc.time_zone=UTC
-spring.datasource.username=manutencao
-spring.datasource.password=manutencao
+spring.datasource.username=${DB_USER:usersfd19}
+spring.datasource.password=${DB_PASSWORD:!cr20anos?OLCTC}
 spring.jpa.hibernate.ddl-auto=update
 spring.datasource.driverClassName=com.microsoft.sqlserver.jdbc.SQLServerDriver
 spring.jpa.hibernate.dialect=org.hibernate.dialect.SQLServer2012Dialect
@@ -24,13 +24,14 @@ app.usa.regras.finalizacao=true
 app.cron.busca.ftp= -
 app.cron.gera.estoque=-
 
-app.cron.petronas.envia.geral=${CRON_PETRONAS_ENVIO:-}
+app.cron.petronas.envia.geral=${CRON_PETRONAS_ENVIO:0 */30 7-22 * * 1-6}
 app.cron.petronas.envia.clientes=${CRON_PETRONAS_CLIENTES:-}
-app.cron.petronas.envia.pedidos=${CRON_PETRONAS_PEDIDOS:-}
+app.cron.petronas.envia.pedidos=${CRON_PETRONAS_PEDIDOS:022 */15 7-22 * * 1-6}
 app.cron.petronas.envia.notas=${CRON_PETRONAS_NOTAS:-}
 app.cron.petronas.envia.produtos=${CRON_PETRONAS_PRODUTOS:-}
 app.cron.petronas.envia.precos=${CRON_PETRONAS_PRECOS:-}
 app.cron.petronas.envia.estoque=${CRON_PETRONAS_ESTOQUE:-}
+
 
 
 # Petronas
