--- a/server/src/main/resources/application.properties
+++ b/server/src/main/resources/application.properties
@@ -48,4 +48,5 @@ app.petronas.auth.user=${AUTH_USERNAME:petronas}
 app.petronas.auth.password=${AUTH_PASSWORD:petronas}
 app.petronas.auth.token=${AUTH_TOKEN:ed91a9f64a03896a76bd091f5128f10d169cf51f}
 
-
+logging.level.br.symbiosys.solucoes.cronospharma.modules.petronas.ports.api.implementation= DEBUG
+feign.client.config.default.loggerLevel=full
