--- a/server/src/main/resources/application.properties
+++ b/server/src/main/resources/application.properties
@@ -20,9 +20,9 @@ spring.datasource.hikari.maxLifetime=1800000
 app.filial.cnpj=01260848000112
 app.filial.local.estoque=01
 app.filial=01
-app.usa.regras.comercias=false
-app.usa.regras.financeiras=true
-app.usa.regras.finalizacao=false
+app.usa.regras.comercias=${REGRAS_COMERCIAIS:false}
+app.usa.regras.financeiras=${REGRAS_FINANCEIRAS:false}
+app.usa.regras.finalizacao=${REGRAS_FINALIZACAO:false}
 
 # Agendamentos
 app.cron.busca.ftp=${CRON_BUSCA_FTP:-}
