--- a/app/src/main/resources/application-prod.properties
+++ b/app/src/main/resources/application-prod.properties
@@ -20,7 +20,7 @@ app.usa.regras.comercias=true
 app.usa.regras.financeiras=true
 app.usa.regras.finalizacao=true
 
-# Agendamentos
+# Agendamentos 2
 app.cron.busca.ftp= -
 app.cron.gera.estoque=-
 
