feito Ajustes nas logicas de envio automatico

--- a/app/src/main/resources/application-prod.properties
+++ b/app/src/main/resources/application-prod.properties
@@ -24,6 +24,7 @@ app.usa.regras.finalizacao=true
 app.cron.busca.ftp= -
 app.cron.gera.estoque=-
 
+app.cron.petronas.converte.pedido=${CRON_PETRONAS_CONVERTE_PEDIDO:-}
 app.cron.petronas.envia.geral=${CRON_PETRONAS_ENVIO:-}
 app.cron.petronas.envia.clientes=${CRON_PETRONAS_CLIENTES:-}
 app.cron.petronas.envia.pedidos=${CRON_PETRONAS_PEDIDOS:-}
