Limpado logs e adicionado pool de threads

--- a/app/src/main/resources/application-prod.properties
+++ b/app/src/main/resources/application-prod.properties
@@ -47,7 +47,7 @@ app.petronas.auth.user=${AUTH_USERNAME:petronas}
 app.petronas.auth.password=${AUTH_PASSWORD:petronas}
 app.petronas.auth.token=${AUTH_TOKEN:ed91a9f64a03896a76bd091f5128f10d169cf51f}
 
-logging.level.br.symbiosys.solucoes.cronospharma.modules.petronas.ports.api.implementation= DEBUG
+logging.level.br.symbiosys.solucoes.cronospharma.modules.petronas.ports.api.implementation= ${LOG_LEVEL:INFO}
 feign.client.config.default.loggerLevel=full
 
 
