Reduzido Logs e aumentado prazo de processamento

--- a/app/src/main/resources/application-prod.properties
+++ b/app/src/main/resources/application-prod.properties
@@ -24,14 +24,14 @@ app.usa.regras.finalizacao=true
 app.cron.busca.ftp= -
 app.cron.gera.estoque=-
 
-app.cron.petronas.converte.pedido=${CRON_PETRONAS_CONVERTE_PEDIDO:-}
-app.cron.petronas.envia.geral=${CRON_PETRONAS_ENVIO:-}
+app.cron.petronas.converte.pedido=-
+app.cron.petronas.envia.geral=0 0 7-19 * * 1-6
 app.cron.petronas.envia.clientes=${CRON_PETRONAS_CLIENTES:-}
-app.cron.petronas.envia.pedidos=${CRON_PETRONAS_PEDIDOS:-}
-app.cron.petronas.envia.notas=${CRON_PETRONAS_NOTAS:-}
-app.cron.petronas.envia.produtos=${CRON_PETRONAS_PRODUTOS:-}
-app.cron.petronas.envia.precos=${CRON_PETRONAS_PRECOS:-}
-app.cron.petronas.envia.estoque=${CRON_PETRONAS_ESTOQUE:-}
+app.cron.petronas.envia.pedidos=0 0 20 * * 1-6
+app.cron.petronas.envia.notas=0 0 23 * * 1-6
+app.cron.petronas.envia.produtos=-
+app.cron.petronas.envia.precos=-
+app.cron.petronas.envia.estoque=-
 
 
 
